# gateway-genvid

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-05-31-095013_create_tables/: down.sql  up.sql
migrations/2025-06-05-141002_add_password_to_users/: up.sql
src/: config.rs  connection.rs  login.rs  main.rs  middleware.rs  models.rs  schema.rs  signup.rs  tracing_setup.rs
src/hello/: mod.rs
src/helper/: hash_password.rs
src/protected_hello/: mod.rs
