[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["set-header", "cors", "trace", "catch-panic"] }
tower-cookies = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }

# Serialization & Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.98"
figment = { version = "0.10.19", features = ["json","toml","env"]}
clap = {version = "4.5.39", features = ["derive", "env"]}
num_cpus = "1.17.0"
diesel = {version = "2.2.10", features = ["postgres", "r2d2"]}
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
argon2 = "0.5"
rand_core = "0.9.3"
password-hash = "0.5.0"
uuid = { version = "1.17", features = ["v4"] }
axum-sessions = "0.6.1"
redis = "0.32.0"
fred = "6"
axum-extra = {version = "0.10.1", features = ["cookie"]}
